# Web-Scraping

web-scraping-exercise/: pyproject.toml
web-scraping-exercise/tests/: test_web_scraping_exercise.py
web-scraping-exercise/web_scraping_exercise/: goodreads.py  goodreads_ver2.py
web-scraping-exercise/web_scraping_exercise/collections/: books.csv  comment.csv  reply.csv
